# Rytmipeli

./: .coveragerc  .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  tasks.py
data/songs/: luvattumaailma.txt  popstars.txt  testibiisi.txt  testibiisi2.txt
dokumentaatio/: arkkitehtuuri.md  käyttöohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: .coverage  .coveragerc  pyproject.toml  tasks.py
laskarit/viikko2/maksukortti/htmlcov/: index.html  src_maksukortti_py.html  status.json
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/poetry-testi/: pyproject.toml
laskarit/viikko2/poetry-testi/src/: index.py
laskarit/viikko2/unicafe/htmlcov/: index.html  src_kassapaate_py.html  src_maksukortti_py.html  status.json
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: catalog.py  game.py  game_logic.py  game_window.py  records_handler.py  rytmipeli.py  song.py  ui.py
src/tests/: catalog_test.py  game_logic_test.py  records_handler_test.py  rytmipeli_test.py  song_test.py
src/tests/catalog_test_songs/: testibiisi.txt
