[tool.poetry]
name = "rytmipeli"
version = "0.1.0"
description = ""
authors = ["pupunu <hunajakettu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
invoke = "^1.5.0"
pyglet = "^1.5.16"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
coverage = "^5.5"
autopep8 = "^1.5.6"
pylint = "^2.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
